# marginism

./: .gitignore  LICENSE  README.md  SPAN_MARGIN_LEARNINGS.md  example.py  pyproject.toml  spanrisk.xml
marginism/: README.md  __init__.py  algorithm.py  api.py  calculator.py  cli.py  downloader.py  exposure.py  instruments.py  parser.py  segments.py
span_margin/: README.md  __init__.py  api.py  calculator.py  cli.py  exposure.py  model.py  parser.py  portfolio.py  symbols.py
tests/: test_calculator.py  test_downloader.py  test_instruments.py  test_parser.py  test_segments.py
