[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "span-margin"
version = "0.1.0"
description = "NSE/NSCCL SPAN margin calculator from CME-SPAN .spn files, with an order-basket margins API"
readme = "span_margin/README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "marginism" }]
keywords = ["span", "margin", "nse", "nfo", "cds", "mcx", "options", "futures", "derivatives"]
dependencies = []   # pure standard library — no third-party deps, runs offline

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
span-margin = "span_margin.cli:main"

[project.urls]
Documentation = "https://www.nseindia.com/products-services/span"

[tool.setuptools]
packages = ["span_margin"]

[tool.setuptools.package-data]
span_margin = ["README.md"]
