[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "marginism"
version = "0.1.0"
description = "NSE/NSCCL SPAN margin calculator from CME-SPAN .spn files, with an order-basket margins API"
readme = "marginism/README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "marginism" }]
keywords = ["span", "margin", "nse", "nfo", "cds", "mcx", "options", "futures", "derivatives"]
dependencies = []   # pure standard library — no third-party deps, runs offline

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
marginism = "marginism.cli:main"

[project.urls]
Documentation = "https://www.nseindia.com/products-services/span"

[tool.setuptools]
packages = ["marginism"]

[tool.setuptools.package-data]
marginism = ["README.md"]
